# gazebo-nodered-control

./: .env.example  .gitignore  README.md  docker-compose.yml
docs/: architecture.md  mqtt-spec.md  softplc-migration.md  test-plan.md  topics.md
gazebo/: Dockerfile  README.md  entrypoint.sh
gazebo/config/: ros_gz_bridge.yaml
gazebo/launch/: gazebo.launch.py
gazebo/worlds/: diff_drive.sdf  diff_drive.world
mosquitto/: README.md
mosquitto/config/: mosquitto.conf
nodered/: Dockerfile  README.md  flows.json
ros2_bridge/: Dockerfile  README.md  entrypoint.sh
ros2_bridge/ws/src/mqtt_ros2_bridge/: package.xml  setup.cfg  setup.py
ros2_bridge/ws/src/mqtt_ros2_bridge/launch/: bridge.launch.py
ros2_bridge/ws/src/mqtt_ros2_bridge/mqtt_ros2_bridge/: bridge_node.py
