<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mqtt_ros2_bridge</name>
  <version>0.1.0</version>
  <description>MQTT to ROS 2 bridge node — translates JSON velocity commands on MQTT into geometry_msgs/Twist on /cmd_vel.</description>
  <maintainer email="dev@example.com">demo</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>python3-paho-mqtt</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
